# PetiteSakura

./: .gitignore  README.md
python/petitesakura/: README.md  pyproject.toml
python/petitesakura/src/petitesakura/: __init__.py
